# ai_practice

./: .gitignore
gcp_vertex/: main.py  pyproject.toml
hello_langchain/: basic_tools.ipynb  gcp_test.py  main.py  pyproject.toml  tools_cont.ipynb
hello_langgraph/: README.md  conditionals.py  hello.py  langgraph.json  loop.py  loops_lecture.py  parallel.py  partial.py  partial_parallel.py  pyproject.toml
hello_langgraph/novice/: react_demo.py
